--- a/index/goods_detail.html
+++ b/index/goods_detail.html
@@ -162,7 +162,7 @@
     </div>
     <div class="goods-content">
         <div class="name">
-            <div class="price">￥<span class="am-text-default">{{agent_price}}</span> </div>
+            <div class="price">代理价：￥<span class="am-text-default">{{agent_price}}</span> </div>
             <p class="title">{{name}}</p>
         </div>
         <dl class="info">
