--- a/login/login.html
+++ b/login/login.html
@@ -10,6 +10,9 @@
   <title>欧洲精英汇</title>
   <link rel="stylesheet" href="../assets/css/amazeui.min.css">
   <link rel="stylesheet" href="../assets/css/hm_ozjyh.css">
+  <style type="text/css">
+        input:-webkit-autofill { box-shadow: 0 0 0px 1000px white inset !important;}
+  </style>
 </head> 
 <body style="background-color: #fff;"> 
 
