--- a/my/my.html
+++ b/my/my.html
@@ -68,7 +68,7 @@
         
         <div class="base-wrap">
             <div class="base-item">
-                <a class="am-block" href="#">
+                <a class="am-block" href="javascript:location.href=preUrl('my/psw.html')">
                     密码管理
                     <i class="icon-forward am-fr"></i>
                 </a>
